--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Open+Sans:wght@400;600;700&display=swap');
+
 @tailwind base;
+
+@layer base {
+    [type="search"]::-webkit-search-cancel-button {
+        display: none;
+    }
+}
+
 @tailwind components;
 @tailwind utilities;
