Remove spinner arrows from input[type="number"]

--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,9 @@
     color: theme(colors.gray.200) !important;
     cursor: default;
 }
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
