Remove default spinner buttons in Firefox

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@
     [type="search"]::-webkit-search-cancel-button {
         display: none;
     }
+    input[type=number] {
+        -moz-appearance: textfield;
+      }
 }
 
 @tailwind components;
