Add .forwards utility class
This utility class sets the animation-fill-mode property to forwards.
It's necessary because without plugins, tailwind doesn't allow
customzing that property.

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,9 @@
     input[type=number] {
         -moz-appearance: textfield;
       }
+      .forwards {
+        animation-fill-mode: forwards !important;
+      }
 }
 
 @tailwind components;
