Remove MS Edge password visibility toggle
In order to not confuse users by presenting two password visibility
icons, I added a style rule to remove the one added by MS Edge by
default.

--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,12 @@
     input[type=number] {
         -moz-appearance: textfield;
       }
-      .forwards {
+    .forwards {
         animation-fill-mode: forwards !important;
       }
+    ::-ms-reveal {
+        display: none;
+    }
 }
 
 @tailwind components;
